New files added

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           python -m venv baseline_env
           ./baseline_env/bin/pip install --upgrade pip
           ./baseline_env/bin/pip install -r requirements.txt
-          ./baseline_env/bin/pip install -e .
+          ./baseline_env/bin/pip install -v -e .
           ./baseline_env/bin/python validation_implicit.py
 
       - name: 💥 2. Run Pip Upgrade (Modernization Attack)
